# SwagLyrics-For-Spotify

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .pep8speaks.yml  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  SwagLyrics.py  appveyor.yml  browser.py  dbus_script.sh  flake.nix  mypy.ini  package.json  pyproject.toml  requirements.txt  rewrite.py  setup.py  spotify.py  tests.py  unsupported.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  tests.yml
SwaglyricsGUI/SwagLyrics/: USING.txt  __init__.py  cli.py  swaglyrics.py
SwaglyricsGUI/SwagLyrics/static/: songChanged.js
docs/: conf.py  index.rst
docs/source/: conf.py  usage.rst  why.rst
static/: songChanged.js  style.css
swaglyrics/: USING.txt  __init__.py  __main__.py  chrome.py  cli.py  config.py  run.py  runtrayapp.py  spotify.py  swaglyrics.py  systray.py  tab.py  test.py  tests.py  unsupported.txt
swaglyrics chrome/: README.md  manifest.json  notifications.js  spotify-chrome-notifications.crx
swaglyrics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swaglyrics/SwaglyricsGUI/SwagLyrics/: out.txt  tab.py  unsupported.txt
swaglyrics/SwaglyricsGUI/SwagLyrics/templates/: lyrics.html
swaglyrics/SwaglyricsGUI/SwagLyrics/web/: index.html  main.js
swaglyrics/static/: songChanged.js
swaglyrics/templates/: lyrics.html
swaglyrics/web/: __main__.py  cli.py  index.html  main.js  swagLyrics.py  tab.py  unsupported.txt
swaglyrics/web/static/: style.css
systrayapp/: CONTRIBUTINGINFO.md  SwagLyricsTrayApp.bat
templates/: lyrics.html
tests/: __init__.py  base.py  integration.py  test_cli.py  test_linux_spotify.py  test_main.py  test_spotify.py  test_tab.py
tests/lssts/: lssts_dataset.tsv  lssts_runner.py
