[tool.poetry]
name = "swaglyrics"
version = "1.2.2"
description = "Fetch the currently playing song from Spotify and display the lyrics in terminal or a browser tab. Very fast."
readme = "README.md"
authors = ["Aadi Bajpai <clash@swaglyrics.dev>"]
license = "MIT"
packages = [
    { include = "swaglyrics" },
]
repository = "https://github.com/SwagLyrics/SwagLyrics-For-Spotify"
documentation = "https://github.com/SwagLyrics/SwagLyrics-For-Spotify/blob/master/README.md"

keywords = ['spotify', 'lyrics', 'python', 'genius']
classifiers= [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Framework :: Flask",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: End Users/Desktop",
]

[tool.poetry.scripts]
swaglyrics = 'swaglyrics.__main__:main'

[tool.poetry.dependencies]
python = "^3.6"
SwSpotify = "^1.2.0"
Flask = "^2.0.1"
requests = "^2.25.1"
Unidecode = "^1.2.0"
beautifulsoup4 = "^4.9.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
blinker = "^1.4"
Flask-Testing = "^0.8.1"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
